# ha-gothick

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  main.py  pyproject.toml  setup_build_env.sh  validate.sh
.github/workflows/: build.yml
config/: config.yaml
docs/: spec.md
scripts/: setup_build_env.sh
src/font_builder/: __init__.py  adjust_bizud.py  adjust_hack.py  build.py  common.py  config.py  ff_utils.py  ft_utils.py  merge.py  optimize.py  patch_nerd.py  patch_tables.py  strip_japanese_hinting.py  validate.py
tests/rendering/: sample.txt
