[project]
name = "ha-gothick"
version = "0.1.0"
description = "Build pipeline for the HA-Gothick programming font."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.58.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "fontbakery>=1.1.0",
]

[project.scripts]
ha-gothick-build = "font_builder.build:main"
ha-gothick-validate = "font_builder.validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/font_builder"]
