[project]
name = "ha-gothick"
version = "0.1.0"
description = "Build pipeline for the HA-Gothick programming font."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.58.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "fontbakery>=1.1.0",
    "ruff>=0.11.0",
]

[project.scripts]
ha-gothick-build = "font_builder.build:main"
ha-gothick-validate = "font_builder.validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/font_builder"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "."]
exclude = [
    ".git",
    ".ruff_cache",
    ".uv-cache",
    ".uv-python",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# チェックするエラーの種類
select = ["ALL"]
ignore = [
    "ANN",
    "D",
    "EM101",
    "EM102",
    "PLR2004",
    "S603",
    "TC003",
    "T201",
    "TRY003",
    "COM812",
]
